@@ -1,3 +1,12 @@
+2008-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	patch #6609: Using PCI parallel port cards on Windows
+	* ppiwin.c (ppi_open): If the port parameter passed from the
+	-p option is neither lpt1/2/3, try interpreting it directly as
+	a base address.
+	* avrdude.1: Document the change.
+	* doc/avrdude.texi: (Ditto.)
+
 2008-11-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	bug #22882: Erase Cycle Counter does not work for stk500v2
